# picoOV5640

./: CMakeLists.txt  ov5640.c  ov5640.h
imagecapture/: ParallelImageCapture.c  ParallelImageCapture.h  StateMachine.c
